website/static/css/main.css
/* General Styles */
body {
    font-family: 'Roboto', sans-serif;
    font-size: 1.2rem;
    background-color: #7d5eb5;
    color: #E0E0E0;
    margin: 0;
    padding: 0;
    line-height: 1.8;
}

/* Header */

header {
    background: #4e3679;
    color: white;
    padding: 25px;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: bold;
}
a {
    color: #fff;
    transition: color 0.3s;

}

a:hover {
    color: #03DAC6;
}
/* Typography */
h2, h3 {
    margin-bottom: 15px;
}

h2 {
    font-size: 2.4rem;
    color: #00dac6;
    text-align: center;
    max-width: 1000px;
    margin-bottom: 0;
}

h3 {
    color: #00dac6;
    font-size: 1.8rem;
    text-transform: uppercase;
    letter-spacing: 1px;
}

article.job h4, article.education-item h4 {
    border-bottom: none;
}
h4{
    color: #00dac6;
    font-size: 1.4rem;
    margin: 0;
    border-bottom: 1px solid #ccc;
}
h5{
    margin: 0;
}
.banner {
    width: 100%;
    height: 150px;
    background: linear-gradient(to right, #7d5eb5, #4e3679);
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    position: relative;
    animation: fadeIn 2s ease-in-out;
}

.banner h2 {
    font-size: 2em;
    color: white;
    position: absolute;
    transform: translateX(-100%);
    animation: slideIn 2s ease-in-out forwards;
}
@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes slideIn {
    from { transform: translateX(-100%); }
    to { transform: translateX(0); }
}

p {
    color: #E0E0E0;
    line-height: 1.8;
}

@keyframes marquee {
    from { transform: translateX(100%); }
    to { transform: translateX(-100%); }
}


/** Sliding banner **/
.sliding-text {
    width: 100%;
    overflow: hidden;
    position: relative;

}

.sliding-text h3{
    display: inline-block;
    position: relative;
    animation: bounceLeftRight 5s ease-in-out infinite alternate;
}

@keyframes bounceLeftRight {
    from { transform: translateX(0%); }
    to { transform: translateX(50%); }
}


/* Main Content Spacing */
.welcome {
    max-width: 1000px;
    margin: 0 auto;
    padding: 30px;
    background: linear-gradient(135deg, #181A1F, #20232A);
    border-radius: 8px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
    text-align: justify;
}

/* Section Layout */
section {
    max-width: 1000px;
    margin: 40px auto;
    padding: 40px;
    background-color: #20232A;
    border-radius: 8px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
}
section#banner{
    max-width: 1080px;
    margin: 40px auto;
    padding: 48px 0;
    background-color: #20232A;
    border-radius: 8px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
}
section#header {
    max-width: 1080px;
    padding: 0;
}
/* Alternating Section Colors */
section:nth-child(even) {
    background-color: #181A1F;
}
article.job, article.education-item {
    border-bottom: 1px solid #03DAC6;
    margin-bottom: 15px;
}
/* List Styling */
ul {
    list-style-type: none;
    padding: 0;
}

li {
    margin-bottom: 10px;
    padding-left: 20px;
    position: relative;
}

li::before {
    content: "▶";
    color: #03DAC6;
    position: absolute;
    left: 0;
}

/* Read More Button */

/* Navbar */
.navbar {
    display: flex;
    justify-content: left;
    padding: 10px 0;
}

.navbar a {
    color: white;
    padding: 12px 18px;
    text-decoration: none;
    text-align: center;
    transition: background 0.3s;
}

.navbar a:hover {
    background-color:#03DAC6;
    border-radius: 4px;
}

/* Image Styles */
img {
    width: 12%;
    height: auto;
    border-radius: 8px;
}
img.project-image {
    height: auto;
    width: 100%;
    object-fit: none;
}
img.banner-image{
    height: 200px;
    width: 100%;
    object-fit: cover;
}

/* Footer */
footer {
    background-color: #4e3679;
    color: white;
    text-align: center;
    padding: 20px;
    position: relative;
    bottom: 0;
    width: 100%;
}

/* Responsive Design */
@media ((min-width:501px) and (max-width: 768px)) {
    .navbar{
        display: table-footer-group;
    }
    .navbar a{
        padding: 12px 9px;
    };
    body {
        text-align: center;
    }
    section {
        padding: 30px;
    }
    
}
/* mobile Responsive Design */
@media ((min-width: 0) and (max-width: 500px)) {

    .navbar{
        display: inline-grid;
    }

    /* Styles for very small screens */
    .menu {
        display: flex;
        flex-direction: column;
        align-items: center;
      }
      .menu li {
        margin: 10px 0;
      }
  }
  

